project(libubench)
cmake_minimum_required(VERSION 3.12)

set(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)

add_library(ubench_static STATIC lib.c)
add_library(ubench_shared SHARED lib.c)
add_library(ubench_cpp_static STATIC lib.cpp)
add_library(ubench_cpp_shared SHARED lib.cpp)
set_target_properties(ubench_static PROPERTIES OUTPUT_NAME ubench)
set_target_properties(ubench_shared PROPERTIES OUTPUT_NAME ubench)
target_compile_definitions(ubench_shared PRIVATE UBENCH_BUILDING_DLL)
target_compile_definitions(ubench_static PRIVATE UBENCH_BUILDING_DLL)
set_target_properties(ubench_cpp_static PROPERTIES OUTPUT_NAME ubench_cpp)
set_target_properties(ubench_cpp_shared PROPERTIES OUTPUT_NAME ubench_cpp)
target_compile_definitions(ubench_cpp_shared PRIVATE UBENCH_BUILDING_DLL)
target_compile_definitions(ubench_cpp_static PRIVATE UBENCH_BUILDING_DLL)
